Prometheus Güncellemeleri Yapıldı

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,9 +15,10 @@ spec:
       containers:
       - name: diyabet-tahmin-app
         image: emredevops/diyabet-tahmin-app:latest
-        imagePullPolicy : Always
+        imagePullPolicy: Always
         ports:
         - containerPort: 8501
+        - containerPort: 8000
 ---
 apiVersion: v1
 kind: Service
@@ -30,4 +31,9 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 8501
+    name: streamlit
+  - protocol: TCP
+    port: 8000
+    targetPort: 8000
+    name: prometheus
   type: LoadBalancer
